archive/old-istio-configs/istio/02-peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default-strict-mtls
  namespace: nf-a-namespace
spec:
  mtls:
    mode: STRICT
