archive/old-istio-configs/istio/01-eastwest-gateway-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-eastwestgateway
  namespace: istio-system
  labels:
    app: istio-eastwestgateway
    istio: eastwestgateway
spec:
  type: LoadBalancer
  selector:
    app: istio-eastwestgateway
    istio: eastwestgateway
  ports:
    - name: status-port
      port: 15021
      targetPort: 15021
      protocol: TCP
    - name: tls
      port: 15443
      targetPort: 15443
      protocol: TCP
    - name: tls-istiod
      port: 15012
      targetPort: 15012
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-eastwestgateway
  namespace: istio-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: istio-eastwestgateway
      istio: eastwestgateway
  template:
    metadata:
      labels:
        app: istio-eastwestgateway
        istio: eastwestgateway
        sidecar.istio.io/inject: "false"
      annotations:
        inject.istio.io/templates: gateway
    spec:
      serviceAccountName: istio-eastwestgateway-service-account
      containers:
        - name: istio-proxy
          image: docker.io/istio/proxyv2:1.27.3
          ports:
            - containerPort: 15021
              protocol: TCP
            - containerPort: 15443
              protocol: TCP
            - containerPort: 15012
              protocol: TCP
