archive/old-istio-configs/istio/04-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: nf-a-gateway
  namespace: nf-a-namespace
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http-didcomm
      protocol: HTTP
    hosts:
    - "*"
